--- a/style.css
+++ b/style.css
@@ -106,18 +106,17 @@ body {
     justify-content: center;
 }
 
-.gray {
+.letter-box.gray {
     background-color: rgb(58, 58, 60);
     border-color: rgb(58, 58, 60);
 }
 
-
-.yellow {
+.letter-box.yellow {
     background-color: rgb(181, 159, 59);
     border-color: rgb(181, 159, 59);
 }
 
-.green {
+.letter-box.green {
     background-color: rgb(83, 141, 78);
     border-color: rgb(83, 141, 78);
 }
@@ -156,6 +155,18 @@ body {
     width: 43px;
     height: 58px;
     font-size: 13.3px;
+}
+
+.letter-button.gray {
+    background-color: rgb(58, 58, 60);
+}
+
+.letter-button.yellow {
+    background-color: rgb(181, 159, 59);
+}
+
+.letter-button.green {
+    background-color: rgb(83, 141, 78);
 }
 
 
